--- a/rottenpotatoes/app/views/movies/show.html.haml
+++ b/rottenpotatoes/app/views/movies/show.html.haml
@@ -21,4 +21,4 @@
 = button_to 'Delete', movie_path(@movie), :method => :delete, :confirm => 'Are you sure?'
 = link_to 'Back to movie list', movies_path
 <br/>
-= link_to 'Find Movies With Same Director', director_path
+= link_to 'Find Movies With Same Director', director_path(:director => @movie.director)
