--- a/rottenpotatoes/app/views/movies/show.html.haml
+++ b/rottenpotatoes/app/views/movies/show.html.haml
@@ -21,4 +21,8 @@
 = button_to 'Delete', movie_path(@movie), :method => :delete, :confirm => 'Are you sure?'
 = link_to 'Back to movie list', movies_path
 <br/>
-= link_to 'Find Movies With Same Director', director_path(:director => @movie.director)
+- if @movie.director.to_s.empty?
+  - #flash[:warning] = "'#{@movie.title}' has no director info." 
+  = link_to 'Find Movies With Same Director', root_path()
+- else
+  = link_to 'Find Movies With Same Director', director_path(:director => @movie.director)
