--- a/rottenpotatoes/app/views/movies/show.html.haml
+++ b/rottenpotatoes/app/views/movies/show.html.haml
@@ -20,9 +20,4 @@
 = link_to 'Edit', edit_movie_path(@movie)
 = button_to 'Delete', movie_path(@movie), :method => :delete, :confirm => 'Are you sure?'
 = link_to 'Back to movie list', movies_path
-<br/>
-- if @movie.director.to_s.empty?
-  - flash[:warning] = "'#{@movie.title}' has no director info."
-  = link_to 'Find Movies With Same Director', movies_path()
-- else
-  = link_to 'Find Movies With Same Director', director_path(:director => @movie.director)
+= link_to 'Find Movies With Same Director', match_path()
